# agentscope

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/tutorial/en/src/: task_mcp.py
docs/tutorial/zh_CN/src/: task_mcp.py
src/agentscope/: workspace.py
src/agentscope/agent/: _agent.py  _config.py
src/agentscope/app/: __init__.py
src/agentscope/app/_manager/: __init__.py  _docker_workspace_manager.py  _e2b_workspace_manager.py  _rl_workspace_manager.py  _workspace_pool.py
src/agentscope/app/workspace_manager/: __init__.py  _docker_workspace_manager.py  _e2b_workspace_manager.py  _rl_workspace_manager.py  _workspace_pool.py
src/agentscope/mcp/: _mcp_client.py
src/agentscope/middleware/: _base.py
src/agentscope/model/_anthropic/: _model.py
src/agentscope/model/_deepseek/: _model.py
src/agentscope/model/_gemini/: _model.py
src/agentscope/model/_kimi/: _model.py
src/agentscope/model/_openai_chat/: _model.py
src/agentscope/model/_openai_response/: _model.py
src/agentscope/model/_xai/: _model.py
src/agentscope/sandbox/: __init__.py  backend_config.py  config.py  connection.py  docker.py  e2b.py  exceptions.py  gateway.py  local_temp.py  manager.py  mcp_gateway.py  sandbox.py  sandbox_manager.py  types.py
src/agentscope/tool/: _adapters.py  _toolkit.py
src/agentscope/workspace/: __init__.py  config.py  docker_workspace.py  docker_workspace_manager.py  e2b_workspace.py  e2b_workspace_manager.py  local_workspace.py  local_workspace_manager.py  mcp_enhanced_workspace.py  mcp_gateway_app.py  types.py  workspace_base.py  workspace_manager_base.py
src/agentscope/workspace/_docker/: _docker_workspace.py  _make_dockerfile.py
src/agentscope/workspace/_e2b/: _e2b_workspace.py
src/agentscope/workspace/gateway/: _mixin.py  _server.py
tests/: context_compression_test.py  mcp_sse_client_test.py  middleware_test.py  workspace_docker_pool_test.py  workspace_e2b_pool_test.py  workspace_local_test.py  workspace_pool_test.py  workspace_rl_manager.py  workspace_rl_pool_test.py
